# otus_cpp_basics

./: .gitignore  Ball.cpp  Ball.hpp  CMakeLists.txt  Color.hpp  Physics.cpp  Point.hpp  README.md  Velocity.hpp  World.cpp  World.hpp  check_container.cpp  container.hpp  main.cpp  statistics.cpp
first/: CMakeLists.txt  functions.cpp  functions.h  main.cpp  move_me_out.cpp  move_me_out.h
module_link_hw/: CMakeLists.txt  argument.cpp  argument.h  high_scores (1-я копия).txt  high_scores.txt  main.cpp  main.h  set_result.cpp  set_result.h  take_inp_val.cpp  take_usr_name.cpp  take_usr_name.h
src/: check_container.cpp  containerList.hpp  containerSerial.hpp  main.cpp
test/: list_container_test.cpp  serial_container_test.cpp  test_list.cpp
